--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/null.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/adaptive.css" />
     <title>day3</title>
   </head>
   <body>
@@ -256,7 +257,7 @@
     <section class="map">
       <div class="container">
         <div class="map__body padding">
-          <img src="assets/images/map/Map.svg" alt="" />
+          <img src="assets/images/map/Map.png" alt="" />
         </div>
       </div>
     </section>
